<resources>
    <string name="app_name">Skin Scan</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="search_text">Looking for medicine?</string>
    <string name="hi">Hi, %s!</string>
    <string name="desc_name">Lets Solve Your Problem Disease !</string>
    <string name="title_type">General Types of Skin Diseases</string>
    <string name="home">Home</string>
    <string name="article">Article</string>
    <string name="history">History</string>
    <string name="profile">Profile</string>
    <string name="hint_pw">Enter your Password</string>
    <string name="hint_gmail">Enter your Email</string>
    <string name="hint_username">Enter your Username</string>
    <string name="btn_login">Login</string>
    <string name="desc_setting">Setting</string>
    <string name="Home_logo">logo</string>
    <string name="home_img">img_doctor\n</string>
    <string name="ic_home">ic_home</string>
    <string name="ic_articleHome">ic_articlehome</string>
    <string name="bg_cam">bg_cam</string>
    <string name="ic_cam">ic_cam</string>
    <string name="SignIn">Sign In</string>
    <string name="txt_decisionLog">Or Sign In With</string>
    <string name="txt_decisionReg">Or Sign Up With</string>
    <string name="desc_login">Don\'t have an Account yet?</string>
    <string name="desc_regis">Already have an Account yet?</string>
    <string name="SignUp">Sign Up</string>
    <string name="desc_splashScreen">Make Your Skin Healthy And Shiny</string>
    <string name="img_detail">img_detail</string>
    <string name="Analyze">Scan This !</string>
    <string name="result_of_scan">Result</string>
    <string name="diagnosed">Diagnosed</string>
    <string name="drug_recommendation">Drug Recommendation</string>
    <string name="disease_prevention">Disease Prevention</string>
    <string name="bg_rv">bg_rv</string>
    <string name="desc_diagnosed"> These are benign and usually don\'t need treatment. Rarely, they may develop into melanoma. Most melanomas start on normal skin.</string>
    <string name="desc_prevention">The majority of melanocytic nevi do not require treatment. Nevi that are benign but bother the patient due to appearance or irritation can be removed. Moles are removed using shaving techniques or suture surgery.</string>
    <string name="desc_drugRecommend">all moles have a very small risk of developing melanoma, a type of skin cancer. The development of melanoma in a congenital melanocytic nevus is very rare.</string>
    <string name="word1">Did u have problem with your skin ?</string>
    <string name="word2">Didn\'t know how to find your skin</string>
    <string name="word3">Any Solution</string>
    <string name="word4">Problem ?</string>
    <string name="word5">To solve this problem ?</string>
    <string name="desc_onboarding2">The best solution is to use the SkinScan app, which identifies skin issues and offers personalized treatment recommendations.</string>
    <string name="descSlide_2">The best solution is to use the SkinScan app, which identifies skin issues and offers personalized treatment recommendations.</string>
    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="label">%s</string>
    <string name="title_article">Let\'s Read The Article !</string>
    <string name="img_article">img_article</string>
    <string name="invalid_email">Incorrect format</string>
    <string name="invalid_data">Please complete this field.</string>
    <string name="invalid_pass">Please enter a password with at least 8 characters.</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="capture_image">capture_image</string>
    <string name="switch_camera">switch_camera</string>
    <string name="camera">Scan</string>
    <string name="permissions_not_granted">Permissions not granted by the user.</string>
    <string name="camera_unavailable">Camera launch failed.</string>
    <string name="failed_to_take_a_picture">Failed to take a photo.</string>
    <string name="login_success">login succefully!</string>
    <string name="new_account">Your account has been registered successfully.</string>
    <string name="new_account_failed">There was a problem creating your account. Please try again.</string>
    <string name="details_unavailable">Details unavailable</string>
    <string name="drug_recommend_unavailable">No medicine recommendation can be provided at this time.</string>
    <string name="preventive_unavailable">Unfortunately, we cannot provide any specific recommendations for preventing this disease.</string>
    <string name="dermatitis_details">Atopic dermatitis is a chronic skin disease that causes inflammation, itching, and redness of the skin. It often appears in children and can persist into adulthood.</string>
    <string name="terms_and_conditions">Terms and Conditions</string>
    <string name="introduction">Introduction</string>
    <string name="desc_intro">Welcome to SkinScan. By downloading or using the Application, you agree to these terms. Please read them carefully before using the Application. You are not allowed to copy, modify, or attempt to extract the source code of the Application, or make derivative versions of it.</string>
    <string name="user_accounts">User Accounts</string>
    <string name="desc_userAcc">To access certain features of the Application, you may need to create an account. You agree to provide accurate and complete information when creating your account. You are responsible for maintaining the confidentiality of your account and password and for restricting access to your device.</string>
    <string name="usage">Usage</string>
    <string name="desc_usage">You agree to use the Application only for lawful purposes. You agree not to use the Application in any way that may cause harm to the Application, other users, or third parties. The Application is designed to assist in the detection of skin conditions and is not intended to replace professional medical advice, diagnosis, or treatment.</string>
    <string name="medical_disclaimer">Medical Disclaimer</string>
    <string name="desc_medicalDisclaimer">The Application provides information based on visual analysis of skin conditions. However, it is not a substitute for professional medical advice, diagnosis, or treatment. Always seek the advice of your physician or other qualified health providers with any questions you may have regarding a medical condition.</string>
    <string name="limitation_of_liability">Limitation of Liability</string>
    <string name="desc_limitation">SkinScan and its developers are not liable for any direct, indirect, incidental, special, or consequential damages, or damages for loss of profits, revenue, data, or use, incurred by you or any third party, arising from your access to or use of the Application. Your use of the Application is at your own risk.</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="desc_privacyPolice">Your privacy is important to us. The Application collects, stores, and uses personal data in accordance with our Privacy Policy. By using the Application, you consent to the collection and use of information in accordance with this policy.</string>
    <string name="fees_and_payments">Fees and Payments</string>
    <string name="desc_fee">The Application may offer certain features or services for a fee. If you choose to purchase any features or services, you agree to pay the applicable fees and taxes. All fees are non-refundable except as required by law.</string>
    <string name="termination">Termination</string>
    <string name="desc_termination">We may terminate or suspend your access to the Application immediately, without prior notice or liability, for any reason whatsoever, including without limitation if you breach the Terms.</string>
    <string name="changes_to_this_agreement">Changes to This Agreement</string>
    <string name="desc_agreement">We reserve the right to modify or replace these Terms at any time. If a revision is material, we will try to provide at least 30 days\' notice before any new terms take effect. Your continued use of the Application after the changes become effective will signify your acceptance of the new terms.</string>
    <string name="governing_law">Governing Law</string>
    <string name="desc_law">These Terms shall be governed and construed in accordance with the Indonesian laws, without regard to its conflict of law provisions.</string>
    <string name="contact_us">Contact Us</string>
    <string name="desc_contact">If you have any questions about these Terms, please contact us at Skinscan@gmail.com or 082376253192.</string>
</resources>