<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.profile.TermAndCondition">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="25dp">

            <TextView
                android:id="@+id/termsTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="16dp"
                android:fontFamily="@font/roboto_bold"
                android:text="@string/terms_and_conditions"
                android:textSize="24sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/introduction"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_marginBottom="8dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/desc_intro"
                android:textSize="16sp"
                android:layout_marginBottom="16dp"/>

            <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/user_accounts"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginBottom="8dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/desc_userAcc"
                android:textSize="16sp"
                android:layout_marginBottom="16dp"/>

           <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/usage"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginBottom="8dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/desc_usage"
                android:textSize="16sp"
                android:layout_marginBottom="16dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/medical_disclaimer"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_marginBottom="8dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/desc_medicalDisclaimer"
                android:textSize="16sp"
                android:layout_marginBottom="16dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/limitation_of_liability"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_marginBottom="8dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/desc_limitation"
                android:textSize="16sp"
                android:layout_marginBottom="16dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/privacy_policy"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_marginBottom="8dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/desc_privacyPolice"
                android:textSize="16sp"
                android:layout_marginBottom="16dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/fees_and_payments"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_marginBottom="8dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/desc_fee"
                android:textSize="16sp"
                android:layout_marginBottom="16dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/termination"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_marginBottom="8dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/desc_termination"
                android:textSize="16sp"
                android:layout_marginBottom="16dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/changes_to_this_agreement"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_marginBottom="8dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/desc_agreement"
                android:textSize="16sp"
                android:layout_marginBottom="16dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/governing_law"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_marginBottom="8dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/desc_law"
                android:textSize="16sp"
                android:layout_marginBottom="16dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/contact_us"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_marginBottom="8dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/desc_contact"
                android:textSize="16sp"
                android:layout_marginBottom="16dp"/>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
