<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="16dp"
    android:background="@color/primaryColor">

    <TextView
        android:id="@+id/onboardingword1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:alpha="0"
        android:fontFamily="@font/roboto_regular"
        android:text="@string/word1"
        android:textColor="@color/blue_2"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"

        tools:alpha="100" />

    <TextView
        android:id="@+id/onboardingword2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/word2"
        android:textSize="20sp"
        android:textColor="@color/blue_3"
        android:fontFamily="@font/roboto_regular"
        android:gravity="center"
        android:alpha="0"
        tools:alpha="100"
        app:layout_constraintTop_toBottomOf="@id/onboardingword1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/onboardingword3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/word3"
        android:textColor="@color/thirdColor"
        android:textSize="18sp"
        android:fontFamily="@font/roboto_regular"
        android:alpha="0"
        tools:alpha="100"
        app:layout_constraintTop_toBottomOf="@id/onboardingword2"
        app:layout_constraintStart_toStartOf=""
        app:layout_constraintEnd_toEndOf=""
        android:paddingStart="95dp"
        android:paddingEnd="10dp"/>

    <TextView
        android:id="@+id/onboardingword4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/word4"
        android:textSize="18sp"
        android:textColor="@color/blue_3"
        android:fontFamily="@font/roboto_regular"
        android:gravity="center"
        android:alpha="0"
        tools:alpha="100"
        app:layout_constraintTop_toBottomOf="@id/onboardingword2"
        app:layout_constraintStart_toStartOf="p"
        app:layout_constraintEnd_toEndOf=""
        android:paddingStart="200dp"
        android:paddingEnd="80dp"/>

    <TextView
        android:id="@+id/onboardingword5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/word5"
        android:textSize="16sp"
        android:textColor="@color/thirdColor"
        android:fontFamily="@font/roboto_regular"
        android:gravity="center"
        android:alpha="0"
        tools:alpha="100"
        app:layout_constraintTop_toBottomOf="@id/onboardingword4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
