<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/diagnosingTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/result_of_scan"
        android:textSize="24sp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/roboto_bold"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="16dp"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/diagnosed"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginBottom="16dp"
        android:padding="12dp"
        app:cardCornerRadius="20dp"
        app:cardElevation="8dp"
        app:cardMaxElevation="12dp">

        <TextView
            android:id="@+id/titlediagnosingData"
            android:background="@drawable/button_shape"
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:layout_margin="10dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:text="@string/diagnosed"
            android:textSize="16sp"
            android:textColor="@color/thirdColor"
            android:fontFamily="@font/roboto_medium"/>

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="60dp"
            android:paddingEnd="13dp"
            android:paddingStart="13dp"
            app:cardCornerRadius="16dp"
            app:cardElevation="4dp">

        <ImageView
            android:id="@+id/imgView"
            android:layout_width="100dp"
            android:layout_height="110dp"
            android:scaleType="centerCrop"
            tools:src="@tools:sample/backgrounds/scenic"/>
    </androidx.cardview.widget.CardView>

        <TextView
        android:id="@+id/label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="53dp"
            android:layout_marginBottom="40dp"
            android:fontFamily="@font/roboto_bold"
            tools:text="@tools:sample/full_names"
            android:textColor="@color/primaryColor" />

        <TextView
            android:id="@+id/diseaseExpTv"
            android:layout_width="230dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:layout_marginStart="50dp"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/roboto_regular"
            android:text="@string/desc_diagnosed"
            android:textColor="@color/primaryColor"
            android:textSize="13sp"
            android:gravity="center" />


    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/drug_Recoomend"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/edittext_shape"
        android:padding="12dp"
        app:cardCornerRadius="20dp"
        app:cardElevation="8dp"
        app:cardMaxElevation="12dp">

        <TextView
            android:id="@+id/titleDrugRecommendationData"
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:layout_margin="10dp"
            android:background="@drawable/button_shape"
            android:fontFamily="@font/roboto_medium"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:text="@string/drug_recommendation"
            android:textColor="@color/thirdColor"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/drugRecTv"
            android:layout_width="300dp"
            android:layout_height="90dp"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:fontFamily="@font/roboto_regular"
            android:text="@string/desc_drugRecommend"
            android:textColor="@color/primaryColor"
            android:textSize="13sp"
            android:gravity="center" />


    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/desease_prevention"
        android:background="@drawable/edittext_shape"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginBottom="16dp"
        android:padding="12dp"
        app:cardCornerRadius="20dp"
        app:cardElevation="8dp"
        app:cardMaxElevation="12dp">

        <TextView
            android:background="@drawable/button_shape"
            android:id="@+id/titleDeseasePreventionData"
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:layout_margin="10dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:text="@string/disease_prevention"
            android:textSize="16sp"
            android:textColor="@color/thirdColor"
            android:fontFamily="@font/roboto_medium"/>

        <TextView
            android:id="@+id/diseasePrevTv"
            android:layout_width="300dp"
            android:layout_height="90dp"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:fontFamily="@font/roboto_regular"
            android:text="@string/desc_prevention"
            android:textColor="@color/primaryColor"
            android:textSize="13sp"
            android:gravity="center" />


    </androidx.cardview.widget.CardView>

</LinearLayout>
